# VSTU-C

./: CMakeLists.txt  README.md
cpp1.1/: hello.cpp
cpp1.2/: hello_err.cpp
cpp1.3/: abc.cpp
cpp1.4/: square_equation.cpp
sfml1.1/: main.cpp
sfml1.2/: main.cpp
sfml1.3/: main.cpp
sfml2.1/: main.cpp
sfml2.2/: main.cpp
sfml3.1/: main.cpp
sfml3.2/: CMakeLists.txt  main.cpp
sfml3.3/: CMakeLists.txt  main.cpp
workshop1.1/: main.cpp
workshop1.2/: CMakeLists.txt  main.cpp
workshop1.3/: CMakeLists.txt  main.cpp
workshop1.4/: CMakeLists.txt  main.cpp
workshop2.1/: CMakeLists.txt  main.cpp
workshop2.2/: CMakeLists.txt  main.cpp
workshop2.3/: CMakeLists.txt  main.cpp
workshop2.4/: CMakeLists.txt  main.cpp
workshop2.5/: CMakeLists.txt  main.cpp
workshop2.6/: CMakeLists.txt  main.cpp
workshop2.7/: CMakeLists.txt  main.cpp
workshop2.8/: CMakeLists.txt  main.cpp
workshop3.1/: CMakeLists.txt  ball.cpp  ball.h  main.cpp
